// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`duty to refer utils dutyToReferToCard returns a NOT_ELIGIBLE duty to refer card 1`] = `
"

<article class="sas-card sas-card--not-eligible">
	<header class="sas-card__head">
		<h3 class="govuk-heading-m govuk-!-margin-bottom-0">Duty to Refer (DTR)</h3>
		<strong class="govuk-tag govuk-tag--grey">Not eligible</strong>
	</header>

	<div class="sas-card__footer">
		

		
			<div class="sas-card__links">
				
					<a class="govuk-body govuk-link govuk-link--no-visited-state" href="#">Notes</a>
				
			</div>
		
	</div>
</article>"
`;

exports[`duty to refer utils dutyToReferToCard returns a NOT_STARTED duty to refer card 1`] = `
"

<article class="sas-card">
	<header class="sas-card__head">
		<h3 class="govuk-heading-m govuk-!-margin-bottom-0">Duty to Refer (DTR)</h3>
		<strong class="govuk-tag govuk-tag--red">Not started</strong>
	</header>

	<div class="sas-card__footer">
		
			

  
<dl class="govuk-summary-list sas-card-summary-list govuk-summary-list--no-border">

  
  <div class="govuk-summary-list__row sas-card-summary-list__row">
    <dt class="govuk-summary-list__key sas-card-summary-list__key">
      Local authority (likely)
    </dt>
    <dd class="govuk-summary-list__value sas-card-summary-list__value">
      Local Authority One
    </dd>
    
  </div>
  

</dl>

		

		
			<div class="sas-card__links">
				
					<a class="govuk-body govuk-link govuk-link--no-visited-state" href="#">Add submission details</a>
				
					<a class="govuk-body govuk-link govuk-link--no-visited-state" href="#">Notes</a>
				
			</div>
		
	</div>
</article>"
`;

exports[`duty to refer utils dutyToReferToCard returns a SUBMITTED duty to refer card 1`] = `
"

<article class="sas-card">
	<header class="sas-card__head">
		<h3 class="govuk-heading-m govuk-!-margin-bottom-0">Duty to Refer (DTR)</h3>
		<strong class="govuk-tag govuk-tag--green">Submitted</strong>
	</header>

	<div class="sas-card__footer">
		
			

  

  

  
<dl class="govuk-summary-list sas-card-summary-list govuk-summary-list--no-border">

  
  <div class="govuk-summary-list__row sas-card-summary-list__row">
    <dt class="govuk-summary-list__key sas-card-summary-list__key">
      Submitted to
    </dt>
    <dd class="govuk-summary-list__value sas-card-summary-list__value">
      Local Authority One
    </dd>
    
  </div>
  

  
  <div class="govuk-summary-list__row sas-card-summary-list__row">
    <dt class="govuk-summary-list__key sas-card-summary-list__key">
      Reference
    </dt>
    <dd class="govuk-summary-list__value sas-card-summary-list__value">
      Jane Doe
    </dd>
    
  </div>
  

  
  <div class="govuk-summary-list__row sas-card-summary-list__row">
    <dt class="govuk-summary-list__key sas-card-summary-list__key">
      Submitted
    </dt>
    <dd class="govuk-summary-list__value sas-card-summary-list__value">
      1 December 2025 (43 days ago)
    </dd>
    
  </div>
  

</dl>

		

		
			<div class="sas-card__links">
				
					<a class="govuk-body govuk-link govuk-link--no-visited-state" href="#">Add outcome</a>
				
					<a class="govuk-body govuk-link govuk-link--no-visited-state" href="#">Notes</a>
				
			</div>
		
	</div>
</article>"
`;

exports[`duty to refer utils dutyToReferToCard returns an empty duty to refer card for unknown status 1`] = `
"

<article class="sas-card">
	<header class="sas-card__head">
		<h3 class="govuk-heading-m govuk-!-margin-bottom-0">Duty to Refer (DTR)</h3>
		<strong class="govuk-tag govuk-tag--grey">Unknown</strong>
	</header>

	<div class="sas-card__footer">
		

		
	</div>
</article>"
`;
